# onnx-infer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  default.nix  flake.nix  package.nix  shell.nix
.github/workflows/: ci.yml
benches/: inference.rs  kernels.rs
fixtures/MaskRCNN-12/test_data_set_0/: input_0.pb  output_0.pb  output_1.pb  output_2.pb  output_3.pb
fixtures/ResNet101-DUC-12/test_data_set_0/: input_0.pb  output_0.pb
fixtures/arcfaceresnet100-8/test_data_set_0/: input_0.pb  output_0.pb
fixtures/bidaf-11-int8/test_data_set_0/: input_0.pb  input_1.pb  input_2.pb  input_3.pb  output_1.pb
fixtures/bidaf-9/test_data_set_0/: input_0.pb  input_1.pb  input_2.pb  input_3.pb  output_0.pb  output_1.pb
fixtures/bidaf-9/test_data_set_1/: input_0.pb  input_1.pb  input_2.pb  input_3.pb  output_0.pb  output_1.pb
fixtures/bidaf-9/test_data_set_10/: input_0.pb  input_1.pb  input_2.pb  input_3.pb  output_0.pb  output_1.pb
fixtures/bidaf-9/test_data_set_11/: input_0.pb  input_1.pb  input_2.pb  input_3.pb  output_0.pb  output_1.pb
fixtures/bidaf-9/test_data_set_12/: input_0.pb  input_1.pb  input_2.pb  input_3.pb  output_0.pb  output_1.pb
fixtures/bidaf-9/test_data_set_13/: input_0.pb  input_1.pb  (+4 more)
fixtures/efficientnet-lite4-11/: efficientnet-lite4.onnx
nix/: xnnpack.nix
src/: activation.rs  binary.rs  blas.rs  conv.rs  dtype.rs  engine.rs  graph_opt.rs  inference.rs  inference_engine.rs  inference_error.rs  lib.rs  matmul.rs  onnx_ir.rs  pool.rs  quantize.rs  shape.rs  tensor.rs  tensor_data.rs  tests.rs  utils.rs  xnnpack_ffi.rs
src/layers/: abs.rs  add.rs  and.rs  argmax.rs  auto_cast.rs  average_pool.rs  batch_norm.rs  cast.rs  category_mapper.rs  ceil.rs  clip.rs  compress.rs  concat.rs  constant.rs  constant_of_shape.rs  conv.rs  conv_transpose.rs  dequantize_linear.rs  div.rs  dropout.rs  equal.rs  exp.rs  expand.rs  flatten.rs  floor.rs  gather.rs  gemm.rs  global_avg_pool.rs  greater.rs  hardmax.rs  identity.rs  if_op.rs  leaky_relu.rs  less.rs  log.rs  loop_op.rs  lrn.rs  lstm.rs  matmul.rs  max_op.rs  (+45 more)
(+207 files in other folders)
