[package]
name = "onnx-infer"
version = "0.1.0"
edition = "2024"
description = "Pure Rust ONNX inference engine for computer vision models"
license = "BSD-3-Clause"

[dependencies]
prost = "0"
clap = { version = "4", features = ["derive"] }
image = "0.25"

[dev-dependencies]
approx = "0.5"

[build-dependencies]
prost-build = "0"
protox = "0.9"

[[bin]]
name = "onnx-infer"
path = "src/bin/infer.rs"
