[package]
name = "onnx-infer"
version = "0.4.2"
edition = "2024"
description = "Pure Rust ONNX inference engine for computer vision models"
license = "BSD-3-Clause"

[features]
cli = ["dep:clap", "dep:image", "dep:prost-reflect", "dep:serde_json"]

[dependencies]
prost = "0"
smallvec = "1"
clap = { version = "4", features = ["derive"], optional = true }
image = { version = "0.25", optional = true }
prost-reflect = { version = "0.16", features = ["serde"], optional = true }
serde_json = { version = "1", optional = true }
tracing = "0.1"

[dev-dependencies]
approx = "0.5"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "inference"
harness = false

[build-dependencies]
prost = "0"
prost-build = "0"
protox = "0.9"

[[bin]]
name = "onnx-infer"
path = "src/bin/infer.rs"
required-features = ["cli"]

[[bin]]
name = "dump_onnx"
path = "src/bin/dump_onnx.rs"
required-features = ["cli"]

[[bin]]
name = "load_onnx"
path = "src/bin/load_onnx.rs"
required-features = ["cli"]
